--- a/bowl_pool/test/2015-2016/rankings.html
+++ b/bowl_pool/test/2015-2016/rankings.html
@@ -342,80 +342,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-01-01 16:13:28</em></div>
-<div class="line"><em>Last bowl scored:  CITRUS BOWL (Michigan vs. Florida)</em></div>
+<div class="line"><em>Last updated:  2016-01-01 17:00:00</em></div>
+<div class="line"><em>Last bowl scored:  COTTON BOWL (Alabama vs. Michigan State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Beaver Believer 31.0</div>
-<div class="line">2. BROCOHLI !!!!! 29.5</div>
-<div class="line">3. <strong>Rocket Surgeon 29.25</strong></div>
-<div class="line">4. Jake &amp; the Neverland Pirates 28.75</div>
-<div class="line">4. Texsons 28.75</div>
-<div class="line">6. <strong>Eclipse 28.5</strong></div>
-<div class="line">6. POPO 28.5</div>
-<div class="line">8. GUAC BOYZ 28.25</div>
-<div class="line">9. Spiker 28.0</div>
-<div class="line">10. Corgidawg 27.75</div>
-<div class="line">10. Devil's Tower 27.75</div>
-<div class="line">10. Santa Cruz Bill 27.75</div>
-<div class="line">10. Yellowstone  27.75</div>
-<div class="line">14. HAM BEAST 27.5</div>
-<div class="line">15. Team Aaron 26.75</div>
-<div class="line">15. Yoda 26.75</div>
-<div class="line">17. <strong>JessePinkman 26.25</strong></div>
-<div class="line">18. Cowboy 26.0</div>
-<div class="line">18. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 26.0</div>
-<div class="line">20. Perfect Spiral 25.75</div>
-<div class="line">21. FIELDS OF WHEAT 25.5</div>
-<div class="line">21. Hunter 55 25.5</div>
-<div class="line">21. Texas Women 25.5</div>
-<div class="line">24. <strong>Captain 25.25</strong></div>
-<div class="line">24. Hou Dat 25.25</div>
-<div class="line">26. BUBBA 25.0</div>
-<div class="line">26. Frog Man 4Ever 25.0</div>
-<div class="line">28. Lucky in 2016 24.5</div>
-<div class="line">29. West Coast Bias 24.0</div>
-<div class="line">30. HALF DOME 23.75</div>
-<div class="line">30. Slave Darby 23.75</div>
-<div class="line">30. Tan Mei yi&nbsp; 23.75</div>
-<div class="line">33. Go Frogs 23.25</div>
-<div class="line">34. Julia 23.0</div>
-<div class="line">34. KROB15 23.0</div>
-<div class="line">36. EL CAPITAN 22.75</div>
-<div class="line">36. Going Bowling 22.75</div>
-<div class="line">36. <strong>Surf 22.75</strong></div>
-<div class="line">39. <strong>D-bo 22.5</strong></div>
-<div class="line">39. GODIVA 22.5</div>
-<div class="line">41. LumberSexual 22.25</div>
-<div class="line">41. Trojans 22.25</div>
-<div class="line">43. Beach Bum 22.0</div>
-<div class="line">43. Blind Prognosticators 22.0</div>
-<div class="line">43. FF  22.0</div>
-<div class="line">43. Magnitogorsk 22.0</div>
-<div class="line">43. TTRedRaider09 22.0</div>
-<div class="line">48. Clairvoyantsmith 21.75</div>
-<div class="line">48. Opposite of Dad 21.75</div>
-<div class="line">50. Trollotopia 21.5</div>
-<div class="line">51. Shi boa 21.25</div>
-<div class="line">51. Sure Thing 21.25</div>
-<div class="line">51. The Force Awakens 21.25</div>
-<div class="line">54. Cotton Headed Ninny Muggins 21.0</div>
-<div class="line">55. Hui Mama 20.75</div>
-<div class="line">56. <strong>Mama Bear 20.5</strong></div>
-<div class="line">56. Oregon Okie 20.5</div>
-<div class="line">56. Texas State 20.5</div>
-<div class="line">59. Blondy 20.0</div>
-<div class="line">59. Spartans 20.0</div>
-<div class="line">61. Billy Bad 19.5</div>
-<div class="line">62. Billy Bad 2nd 19.0</div>
-<div class="line">62. Pooh 19.0</div>
-<div class="line">64. COUGAR 18.75</div>
-<div class="line">64. Gussysue 18.75</div>
-<div class="line">66. Bernie Trump 17.5</div>
-<div class="line">66. <strong>Groodle 17.5</strong></div>
-<div class="line">68. Aggies 17.0</div>
-<div class="line">68. Deakins 17.0</div>
-<div class="line">70. GMen 13.75</div>
+<div class="line">1. BROCOHLI !!!!! 25.5</div>
+<div class="line">2. <strong>Eclipse 23.5</strong></div>
+<div class="line">3. GUAC BOYZ 23.25</div>
+<div class="line">4. Beaver Believer 23.0</div>
+<div class="line">4. Spiker 23.0</div>
+<div class="line">6. Jake &amp; the Neverland Pirates 22.75</div>
+<div class="line">7. HAM BEAST 22.5</div>
+<div class="line">8. <strong>Rocket Surgeon 22.25</strong></div>
+<div class="line">9. Santa Cruz Bill 21.75</div>
+<div class="line">9. Team Aaron 21.75</div>
+<div class="line">11. FIELDS OF WHEAT 21.5</div>
+<div class="line">11. POPO 21.5</div>
+<div class="line">13. Hou Dat 21.25</div>
+<div class="line">13. <strong>JessePinkman 21.25</strong></div>
+<div class="line">15. KROB15 21.0</div>
+<div class="line">16. Corgidawg 20.75</div>
+<div class="line">16. Texsons 20.75</div>
+<div class="line">16. Yellowstone  20.75</div>
+<div class="line">16. Yoda 20.75</div>
+<div class="line">20. GODIVA 20.5</div>
+<div class="line">21. Go Frogs 20.25</div>
+<div class="line">22. Cowboy 20.0</div>
+<div class="line">22. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 20.0</div>
+<div class="line">22. TTRedRaider09 20.0</div>
+<div class="line">25. Devil's Tower 19.75</div>
+<div class="line">25. Opposite of Dad 19.75</div>
+<div class="line">25. Perfect Spiral 19.75</div>
+<div class="line">28. Hunter 55 19.5</div>
+<div class="line">28. Lucky in 2016 19.5</div>
+<div class="line">30. <strong>Captain 19.25</strong></div>
+<div class="line">31. Beach Bum 19.0</div>
+<div class="line">31. Julia 19.0</div>
+<div class="line">31. West Coast Bias 19.0</div>
+<div class="line">34. Clairvoyantsmith 18.75</div>
+<div class="line">34. Going Bowling 18.75</div>
+<div class="line">36. Texas State 18.5</div>
+<div class="line">36. Texas Women 18.5</div>
+<div class="line">38. Blind Prognosticators 18.0</div>
+<div class="line">38. FF  18.0</div>
+<div class="line">38. Frog Man 4Ever 18.0</div>
+<div class="line">41. HALF DOME 17.75</div>
+<div class="line">41. Slave Darby 17.75</div>
+<div class="line">41. <strong>Surf 17.75</strong></div>
+<div class="line">41. Tan Mei yi&nbsp; 17.75</div>
+<div class="line">45. <strong>D-bo 17.5</strong></div>
+<div class="line">46. LumberSexual 17.25</div>
+<div class="line">46. Sure Thing 17.25</div>
+<div class="line">46. The Force Awakens 17.25</div>
+<div class="line">49. BUBBA 17.0</div>
+<div class="line">49. Cotton Headed Ninny Muggins 17.0</div>
+<div class="line">49. Pooh 17.0</div>
+<div class="line">52. EL CAPITAN 16.75</div>
+<div class="line">53. Billy Bad 16.5</div>
+<div class="line">53. <strong>Mama Bear 16.5</strong></div>
+<div class="line">55. Blondy 16.0</div>
+<div class="line">55. Magnitogorsk 16.0</div>
+<div class="line">55. Spartans 16.0</div>
+<div class="line">58. COUGAR 15.75</div>
+<div class="line">59. Oregon Okie 15.5</div>
+<div class="line">59. Trollotopia 15.5</div>
+<div class="line">61. Shi boa 15.25</div>
+<div class="line">61. Trojans 15.25</div>
+<div class="line">63. Billy Bad 2nd 15.0</div>
+<div class="line">64. Gussysue 14.75</div>
+<div class="line">64. Hui Mama 14.75</div>
+<div class="line">66. <strong>Groodle 14.5</strong></div>
+<div class="line">67. Bernie Trump 13.5</div>
+<div class="line">68. Aggies 11.0</div>
+<div class="line">68. Deakins 11.0</div>
+<div class="line">70. GMen 10.75</div>
 </div>
 </div>
 </body>
