--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-29 00:38:33</em></div>
-<div class="line"><em>Last bowl scored:  Holiday Bowl (Washington State vs. Michigan State)</em></div>
+<div class="line"><em>Last updated:  2017-12-29 21:41:46</em></div>
+<div class="line"><em>Last bowl scored:  Arizona Bowl (New Mexico State vs. Utah State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 23.0</div>
-<div class="line">1. Trojans 23.0</div>
-<div class="line">3. The Water and The Well 22.5</div>
-<div class="line">4. Bobbo 20.25</div>
-<div class="line">4. Santa Cruz Bill 20.25</div>
-<div class="line">6. Cowboy 20.0</div>
-<div class="line">7. Jake and the Neverland Pirates 19.75</div>
-<div class="line">7. UrbranLegend 19.75</div>
-<div class="line">7. War Eagle 19.75</div>
-<div class="line">10. <strong>Bumblerooski 19.5</strong></div>
-<div class="line">10. Superman 19.5</div>
-<div class="line">12. Juul 19.0</div>
-<div class="line">13. 4 Rackets 18.75</div>
-<div class="line">13. Make Bowl Season Great Again 18.75</div>
-<div class="line">15. beach lady 18.5</div>
-<div class="line">15. Bevo's Best 18.5</div>
-<div class="line">15. <strong>Eclipse 18.5</strong></div>
-<div class="line">15. The Pick Doctor 18.5</div>
-<div class="line">19. Godiva Nine! 18.25</div>
-<div class="line">19. <strong>Nerf Herder 18.25</strong></div>
-<div class="line">21. OSUX3 18.0</div>
-<div class="line">22. I lost the password to my first bracket 17.75</div>
-<div class="line">22. Still a Beaver Believer 17.75</div>
-<div class="line">22. Yoda 17.75</div>
-<div class="line">25. <strong>#MamaBear 17.5</strong></div>
-<div class="line">25. Winning Jeff 17.5</div>
-<div class="line">27. Katyusha 17.25</div>
-<div class="line">27. Pooh Bear 17.25</div>
-<div class="line">29. Putin's Dog 17.0</div>
-<div class="line">29. War Beaver 17.0</div>
-<div class="line">31. Bay City Rollers 16.5</div>
-<div class="line">31. cutie pie 16.5</div>
-<div class="line">33. Luck be a lady 16.25</div>
-<div class="line">33. MidWestWheat 16.25</div>
-<div class="line">33. Rapacke's Bracket 16.25</div>
-<div class="line">36. Adrian A 16.0</div>
-<div class="line">36. <strong>Thunder 16.0</strong></div>
-<div class="line">36. Tucker 16.0</div>
-<div class="line">39. Coog Crew 15.75</div>
-<div class="line">39. Josh's Bracket 15.75</div>
-<div class="line">39. Maui Girl 15.75</div>
-<div class="line">42. <strong>Lightning 15.5</strong></div>
-<div class="line">43. Assistant Coach Riley? 15.25</div>
-<div class="line">43. Go For Bones 15.25</div>
-<div class="line">45. Blind Dog's Bluff 15.0</div>
-<div class="line">45. Kevin's bracket 15.0</div>
-<div class="line">45. Pepper Bear 15.0</div>
-<div class="line">45. Sorbet 15.0</div>
-<div class="line">49. <strong>GlamKam 14.75</strong></div>
-<div class="line">50. Escalante 14.5</div>
-<div class="line">50. Sgt. Pepper 14.5</div>
-<div class="line">50. Texas Big Red 14.5</div>
-<div class="line">53. Brothers before others 14.25</div>
-<div class="line">53. Duke Rules 14.25</div>
-<div class="line">53. Victorious Secret 14.25</div>
-<div class="line">56. Blindhog2017 14.0</div>
-<div class="line">56. YOLO Pups 14.0</div>
-<div class="line">58. Lucky in 2018 13.75</div>
-<div class="line">59. Batman 13.5</div>
-<div class="line">59. Go For Broke 13.5</div>
-<div class="line">61. Swampdonkey 13.25</div>
-<div class="line">61. The Striker 13.25</div>
-<div class="line">63. Santa's Helper 13.0</div>
-<div class="line">63. <strong>Static 13.0</strong></div>
-<div class="line">63. West Coast Bias 13.0</div>
-<div class="line">66. <strong>D-Bo 12.75</strong></div>
-<div class="line">66. hapagirl 12.75</div>
-<div class="line">66. Nurse Ratched 12.75</div>
-<div class="line">66. Warren Mooned Me 12.75</div>
-<div class="line">70. Julez 11.75</div>
-<div class="line">71. <strong>Em214 10.0</strong></div>
+<div class="line">1. Clutch City 25.0</div>
+<div class="line">2. The Water and The Well 24.5</div>
+<div class="line">3. Trojans 24.0</div>
+<div class="line">4. Cowboy 22.0</div>
+<div class="line">4. Juul 22.0</div>
+<div class="line">6. Jake and the Neverland Pirates 21.75</div>
+<div class="line">6. Still a Beaver Believer 21.75</div>
+<div class="line">6. UrbranLegend 21.75</div>
+<div class="line">9. beach lady 21.5</div>
+<div class="line">9. <strong>Bumblerooski 21.5</strong></div>
+<div class="line">9. Superman 21.5</div>
+<div class="line">9. The Pick Doctor 21.5</div>
+<div class="line">13. Bobbo 21.25</div>
+<div class="line">13. <strong>Nerf Herder 21.25</strong></div>
+<div class="line">13. Santa Cruz Bill 21.25</div>
+<div class="line">16. 4 Rackets 20.75</div>
+<div class="line">16. I lost the password to my first bracket 20.75</div>
+<div class="line">16. Make Bowl Season Great Again 20.75</div>
+<div class="line">16. War Eagle 20.75</div>
+<div class="line">20. <strong>Eclipse 20.5</strong></div>
+<div class="line">21. Godiva Nine! 20.25</div>
+<div class="line">22. OSUX3 20.0</div>
+<div class="line">23. Yoda 19.75</div>
+<div class="line">24. <strong>#MamaBear 19.5</strong></div>
+<div class="line">24. Bevo's Best 19.5</div>
+<div class="line">24. cutie pie 19.5</div>
+<div class="line">27. Katyusha 19.25</div>
+<div class="line">27. Luck be a lady 19.25</div>
+<div class="line">27. MidWestWheat 19.25</div>
+<div class="line">30. Putin's Dog 19.0</div>
+<div class="line">30. <strong>Thunder 19.0</strong></div>
+<div class="line">30. Tucker 19.0</div>
+<div class="line">33. Bay City Rollers 18.5</div>
+<div class="line">33. Winning Jeff 18.5</div>
+<div class="line">35. Rapacke's Bracket 18.25</div>
+<div class="line">36. Adrian A 18.0</div>
+<div class="line">36. Pepper Bear 18.0</div>
+<div class="line">36. Sorbet 18.0</div>
+<div class="line">36. War Beaver 18.0</div>
+<div class="line">40. Coog Crew 17.75</div>
+<div class="line">40. Maui Girl 17.75</div>
+<div class="line">42. Escalante 17.5</div>
+<div class="line">42. <strong>Lightning 17.5</strong></div>
+<div class="line">42. Texas Big Red 17.5</div>
+<div class="line">45. Pooh Bear 17.25</div>
+<div class="line">45. Victorious Secret 17.25</div>
+<div class="line">47. <strong>GlamKam 16.75</strong></div>
+<div class="line">48. Batman 16.5</div>
+<div class="line">48. Go For Broke 16.5</div>
+<div class="line">48. Sgt. Pepper 16.5</div>
+<div class="line">51. Assistant Coach Riley? 16.25</div>
+<div class="line">51. Go For Bones 16.25</div>
+<div class="line">53. Blind Dog's Bluff 16.0</div>
+<div class="line">53. Kevin's bracket 16.0</div>
+<div class="line">53. YOLO Pups 16.0</div>
+<div class="line">56. Josh's Bracket 15.75</div>
+<div class="line">56. Nurse Ratched 15.75</div>
+<div class="line">58. Brothers before others 15.25</div>
+<div class="line">58. The Striker 15.25</div>
+<div class="line">60. Blindhog2017 15.0</div>
+<div class="line">60. Santa's Helper 15.0</div>
+<div class="line">60. <strong>Static 15.0</strong></div>
+<div class="line">63. hapagirl 14.75</div>
+<div class="line">63. Lucky in 2018 14.75</div>
+<div class="line">63. Warren Mooned Me 14.75</div>
+<div class="line">66. Duke Rules 14.25</div>
+<div class="line">66. Swampdonkey 14.25</div>
+<div class="line">68. West Coast Bias 14.0</div>
+<div class="line">69. <strong>D-Bo 13.75</strong></div>
+<div class="line">69. Julez 13.75</div>
+<div class="line">71. <strong>Em214 12.0</strong></div>
 </div>
 </div>
 </body>
