--- a/bowl_pool/2017-2018/results.html
+++ b/bowl_pool/2017-2018/results.html
@@ -2447,82 +2447,313 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.25</td>
 </tr>
+<tr><td>26</td>
+<td>Belk Bowl</td>
+<td>Wake Forest</td>
+<td>Texas A&amp;M</td>
+<td>3.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>27</td>
+<td>Music City Bowl</td>
+<td>Northwestern</td>
+<td>Kentucky</td>
+<td>7.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>28</td>
+<td>Arizona Bowl</td>
+<td>New Mexico State</td>
+<td>Utah State</td>
+<td>4.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>17.5</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>13.5</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>16.5</strong></td>
 <td><strong>18.5</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>14.25</strong></td>
+<td><strong>21.5</strong></td>
 <td><strong>19.5</strong></td>
-<td><strong>23.0</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>19.25</strong></td>
 <td><strong>15.75</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>19.0</strong></td>
+<td><strong>18.0</strong></td>
 <td><strong>17.25</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>18.25</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>12.75</strong></td>
+<td><strong>16.5</strong></td>
 <td><strong>18.0</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>18.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>19.75</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>21.5</strong></td>
 <td><strong>14.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>13.0</strong></td>
 <td><strong>17.5</strong></td>
-<td><strong>17.75</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>14.0</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>16.0</strong></td>
 </tr>
 </tbody>
 </table>
