--- a/bowl_pool/2017-2018/rankings.html
+++ b/bowl_pool/2017-2018/rankings.html
@@ -364,81 +364,81 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2017-12-30 08:25:24</em></div>
-<div class="line"><em>Last bowl scored:  Cotton Bowl (Ohio State vs. Southern Cal (USC))</em></div>
+<div class="line"><em>Last updated:  2017-12-30 15:32:56</em></div>
+<div class="line"><em>Last bowl scored:  Fiesta Bowl (Penn State vs. Washington)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Clutch City 27.0</div>
-<div class="line">2. The Water and The Well 26.5</div>
-<div class="line">3. Cowboy 24.0</div>
-<div class="line">3. Juul 24.0</div>
-<div class="line">3. Trojans 24.0</div>
-<div class="line">6. I lost the password to my first bracket 23.75</div>
-<div class="line">6. Jake and the Neverland Pirates 23.75</div>
-<div class="line">6. UrbranLegend 23.75</div>
-<div class="line">9. beach lady 23.5</div>
-<div class="line">9. <strong>Bumblerooski 23.5</strong></div>
-<div class="line">9. The Pick Doctor 23.5</div>
-<div class="line">12. Bobbo 23.25</div>
-<div class="line">13. OSUX3 23.0</div>
-<div class="line">14. 4 Rackets 22.75</div>
-<div class="line">14. Make Bowl Season Great Again 22.75</div>
-<div class="line">14. War Eagle 22.75</div>
-<div class="line">14. Yoda 22.75</div>
-<div class="line">18. cutie pie 22.5</div>
-<div class="line">18. <strong>Eclipse 22.5</strong></div>
-<div class="line">20. Godiva Nine! 22.25</div>
-<div class="line">21. Still a Beaver Believer 21.75</div>
-<div class="line">22. Bevo's Best 21.5</div>
-<div class="line">22. Superman 21.5</div>
-<div class="line">22. Winning Jeff 21.5</div>
-<div class="line">25. Katyusha 21.25</div>
-<div class="line">25. Luck be a lady 21.25</div>
-<div class="line">25. MidWestWheat 21.25</div>
-<div class="line">25. <strong>Nerf Herder 21.25</strong></div>
-<div class="line">25. Santa Cruz Bill 21.25</div>
-<div class="line">30. Putin's Dog 21.0</div>
-<div class="line">30. <strong>Thunder 21.0</strong></div>
-<div class="line">30. Tucker 21.0</div>
-<div class="line">33. Rapacke's Bracket 20.25</div>
-<div class="line">34. Adrian A 20.0</div>
-<div class="line">34. Pepper Bear 20.0</div>
-<div class="line">34. Sorbet 20.0</div>
-<div class="line">37. Coog Crew 19.75</div>
-<div class="line">37. Maui Girl 19.75</div>
-<div class="line">39. <strong>#MamaBear 19.5</strong></div>
-<div class="line">39. Batman 19.5</div>
-<div class="line">39. Escalante 19.5</div>
-<div class="line">42. Victorious Secret 19.25</div>
-<div class="line">43. <strong>GlamKam 18.75</strong></div>
-<div class="line">44. Bay City Rollers 18.5</div>
-<div class="line">44. Go For Broke 18.5</div>
-<div class="line">46. Assistant Coach Riley? 18.25</div>
-<div class="line">47. Kevin's bracket 18.0</div>
-<div class="line">47. War Beaver 18.0</div>
-<div class="line">49. Josh's Bracket 17.75</div>
-<div class="line">49. Lucky in 2018 17.75</div>
-<div class="line">51. <strong>Lightning 17.5</strong></div>
-<div class="line">51. Texas Big Red 17.5</div>
-<div class="line">53. Brothers before others 17.25</div>
-<div class="line">53. Pooh Bear 17.25</div>
-<div class="line">53. The Striker 17.25</div>
-<div class="line">56. Santa's Helper 17.0</div>
-<div class="line">56. <strong>Static 17.0</strong></div>
-<div class="line">58. Julez 16.75</div>
-<div class="line">59. Sgt. Pepper 16.5</div>
-<div class="line">60. Go For Bones 16.25</div>
-<div class="line">60. Swampdonkey 16.25</div>
-<div class="line">62. Blind Dog's Bluff 16.0</div>
-<div class="line">62. YOLO Pups 16.0</div>
-<div class="line">64. Nurse Ratched 15.75</div>
-<div class="line">65. Blindhog2017 15.0</div>
-<div class="line">66. hapagirl 14.75</div>
-<div class="line">66. Warren Mooned Me 14.75</div>
-<div class="line">68. Duke Rules 14.25</div>
-<div class="line">69. <strong>Em214 14.0</strong></div>
-<div class="line">69. West Coast Bias 14.0</div>
-<div class="line">71. <strong>D-Bo 13.75</strong></div>
+<div class="line">1. The Water and The Well 29.25</div>
+<div class="line">2. Clutch City 27.0</div>
+<div class="line">3. Cowboy 26.75</div>
+<div class="line">4. UrbranLegend 26.5</div>
+<div class="line">5. Juul 25.5</div>
+<div class="line">5. Trojans 25.5</div>
+<div class="line">7. The Pick Doctor 24.75</div>
+<div class="line">8. Bobbo 24.5</div>
+<div class="line">9. Bevo's Best 24.25</div>
+<div class="line">9. Superman 24.25</div>
+<div class="line">11. 4 Rackets 24.0</div>
+<div class="line">11. Make Bowl Season Great Again 24.0</div>
+<div class="line">11. MidWestWheat 24.0</div>
+<div class="line">11. War Eagle 24.0</div>
+<div class="line">11. Yoda 24.0</div>
+<div class="line">16. cutie pie 23.75</div>
+<div class="line">16. <strong>Eclipse 23.75</strong></div>
+<div class="line">16. I lost the password to my first bracket 23.75</div>
+<div class="line">16. Jake and the Neverland Pirates 23.75</div>
+<div class="line">20. beach lady 23.5</div>
+<div class="line">20. <strong>Bumblerooski 23.5</strong></div>
+<div class="line">22. OSUX3 23.0</div>
+<div class="line">23. Winning Jeff 22.75</div>
+<div class="line">24. Santa Cruz Bill 22.5</div>
+<div class="line">25. <strong>#MamaBear 22.25</strong></div>
+<div class="line">25. Godiva Nine! 22.25</div>
+<div class="line">27. Still a Beaver Believer 21.75</div>
+<div class="line">28. Katyusha 21.25</div>
+<div class="line">28. Luck be a lady 21.25</div>
+<div class="line">28. <strong>Nerf Herder 21.25</strong></div>
+<div class="line">31. Assistant Coach Riley? 21.0</div>
+<div class="line">31. Pooh Bear 21.0</div>
+<div class="line">31. Putin's Dog 21.0</div>
+<div class="line">31. <strong>Thunder 21.0</strong></div>
+<div class="line">31. Tucker 21.0</div>
+<div class="line">36. War Beaver 20.75</div>
+<div class="line">37. Josh's Bracket 20.5</div>
+<div class="line">37. Lucky in 2018 20.5</div>
+<div class="line">39. <strong>GlamKam 20.25</strong></div>
+<div class="line">39. Rapacke's Bracket 20.25</div>
+<div class="line">39. Texas Big Red 20.25</div>
+<div class="line">42. Adrian A 20.0</div>
+<div class="line">42. Brothers before others 20.0</div>
+<div class="line">42. Pepper Bear 20.0</div>
+<div class="line">42. Sorbet 20.0</div>
+<div class="line">46. Coog Crew 19.75</div>
+<div class="line">46. Maui Girl 19.75</div>
+<div class="line">46. Santa's Helper 19.75</div>
+<div class="line">46. <strong>Static 19.75</strong></div>
+<div class="line">50. Batman 19.5</div>
+<div class="line">50. Escalante 19.5</div>
+<div class="line">52. Kevin's bracket 19.25</div>
+<div class="line">52. Victorious Secret 19.25</div>
+<div class="line">54. Blindhog2017 18.75</div>
+<div class="line">55. Bay City Rollers 18.5</div>
+<div class="line">55. Go For Broke 18.5</div>
+<div class="line">57. Go For Bones 17.75</div>
+<div class="line">57. Sgt. Pepper 17.75</div>
+<div class="line">59. Blind Dog's Bluff 17.5</div>
+<div class="line">59. <strong>Lightning 17.5</strong></div>
+<div class="line">61. The Striker 17.25</div>
+<div class="line">62. Duke Rules 17.0</div>
+<div class="line">62. Nurse Ratched 17.0</div>
+<div class="line">64. Julez 16.75</div>
+<div class="line">65. <strong>D-Bo 16.25</strong></div>
+<div class="line">65. Swampdonkey 16.25</div>
+<div class="line">67. hapagirl 16.0</div>
+<div class="line">67. YOLO Pups 16.0</div>
+<div class="line">69. <strong>Em214 15.5</strong></div>
+<div class="line">70. West Coast Bias 15.25</div>
+<div class="line">71. Warren Mooned Me 14.75</div>
 </div>
 </div>
 </body>
