--- a/bowl_pool/test/2017-2018/results.html
+++ b/bowl_pool/test/2017-2018/results.html
@@ -2755,81 +2755,235 @@ ul.auto-toc {
 <td>3.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>30</td>
+<td>TaxSlayer Bowl</td>
+<td>Louisville</td>
+<td>Mississippi State</td>
+<td>6.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>2.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>39</td>
+<td>Liberty Bowl</td>
+<td>Memphis</td>
+<td>Iowa State</td>
+<td>3.5</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>1.25</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>19.5</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>22.25</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>18.25</strong></td>
+<td><strong>21.0</strong></td>
 <td><strong>19.5</strong></td>
 <td><strong>18.5</strong></td>
 <td><strong>23.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>16.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>20.0</strong></td>
 <td><strong>28.25</strong></td>
 <td><strong>27.0</strong></td>
 <td><strong>19.75</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>18.75</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>23.75</strong></td>
 <td><strong>16.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>17.75</strong></td>
 <td><strong>18.5</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>16.0</strong></td>
 <td><strong>23.75</strong></td>
 <td><strong>23.75</strong></td>
-<td><strong>17.75</strong></td>
+<td><strong>20.5</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>24.0</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>18.0</strong></td>
+<td><strong>19.25</strong></td>
 <td><strong>17.5</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>19.75</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>15.75</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>17.0</strong></td>
 <td><strong>23.0</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>21.0</strong></td>
 <td><strong>21.0</strong></td>
 <td><strong>20.25</strong></td>
 <td><strong>21.25</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>16.5</strong></td>
+<td><strong>22.5</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>17.75</strong></td>
 <td><strong>20.0</strong></td>
-<td><strong>17.0</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>21.75</strong></td>
-<td><strong>21.5</strong></td>
+<td><strong>24.25</strong></td>
 <td><strong>16.25</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>23.5</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>24.75</strong></td>
 <td><strong>17.25</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>21.0</strong></td>
 <td><strong>26.5</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>23.75</strong></td>
 <td><strong>19.25</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>22.75</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>21.5</strong></td>
+<td><strong>15.25</strong></td>
 <td><strong>22.75</strong></td>
+<td><strong>24.0</strong></td>
 <td><strong>16.0</strong></td>
 </tr>
 </tbody>
